--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
 	<article>
 		<section>
 			<h3>About Me</h3>
-			<p>A few things I like are programming, free & open-source software, maths, reading, endurance sports and techno music.</p>
-			<p>I natively speak German, am fairly proficient in English and know basics in Italian & Dutch.</p>
+			<p>A few things I like are programming, free &amp; open-source software, maths, reading, endurance sports and techno music.</p>
+			<p>I natively speak German, am fairly proficient in English and know basics in Italian &amp; Dutch.</p>
             <p>The programming languages I started programming with are Java and Python. At the moment, I'm learning Haskell.</p>
 		</section>
 
@@ -46,7 +46,7 @@
 		<section>
 			<h3>Software I use</h3>
 			<ul>
-				<li>MacOS & Debian</li>
+				<li>MacOS &amp; Debian</li>
 				<li>Alacritty</li>
 				<li>tmux</li>
 				<li>Neovim</li>
