--- a/index.html
+++ b/index.html
@@ -10,25 +10,18 @@
     <title>jasperott.xyz</title>
 </head>
 <body class="content">
-		<p>Hi, I'm Jasper and this is my personal website.<br>
-		You can find out more about me and this website <a href="about.html">here</a>.</p>
+		<p>Hi, I'm Jasper and this is my personal website.</p>
+        <p>You can find out more about me and this website <a href="about.html">here</a>.</p>
 
-		<br>
+        <section>
+            <h3>Projects</h3>
+            <p>---</p>
+        </section>
 
-		Projects<br>
-		<br>
-		ykruman<br>
-		plupdater<br>
-		mmps<br>
-		[<a href="projects.html">more</a>]<br>
-
-		<br>
-
-		Links<br>
-		<br>
-        <a href="https://github.com/jott8">Github</a><br>
-
-        <br>
+        <section>
+            <h3>Links</h3>
+            <p><a href="https://github.com/jott8">Github</a></p>
+        </section>
 
 		<hr>
 		<footer>
