--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <section>
             <h3>Links</h3>
+            <p><a href=/tools.html>Tools</a></p>
             <p><a href="https://github.com/jott8">Github</a></p>
         </section>
 
