add contact email

--- a/about.html
+++ b/about.html
@@ -34,8 +34,13 @@
 
 			<details>
 				<summary>XMPP</summary>
-				<address>jasper[at]wiuwiu[dot]de</address>
+				<address>jasper at wiuwiu dot de</address>
 			</details>
+
+            <details>
+                <summary>Email</summary>
+                <address>contact at jasperott dot xyz</address>
+            </details>
 		</section>
 
 		<section>
